--- a/index.html
+++ b/index.html
@@ -28,37 +28,176 @@
         </ul>
       </header>
       <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h2>
+<a id="install" class="anchor" href="#install" aria-hidden="true"><span class="octicon octicon-link"></span></a>Install</h2>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<div class="highlight highlight-ruby"><pre><span class="pl-k">gem</span> install easy<span class="pl-k">-</span>exist</pre></div>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<h2>
+<a id="examples" class="anchor" href="#examples" aria-hidden="true"><span class="octicon octicon-link"></span></a>Examples</h2>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="tldr" class="anchor" href="#tldr" aria-hidden="true"><span class="octicon octicon-link"></span></a>TL:DR</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<div class="highlight highlight-ruby"><pre><span class="pl-k">require</span> <span class="pl-s"><span class="pl-pds">'</span>easy-exist<span class="pl-pds">'</span></span>
+
+<span class="pl-c"># connect</span>
+db <span class="pl-k">=</span> <span class="pl-c1">EasyExist</span>::<span class="pl-c1">DB</span>.<span class="pl-k">new</span>(<span class="pl-s"><span class="pl-pds">"</span>http://localhost:8080<span class="pl-pds">"</span></span>, { 
+    <span class="pl-c1">username:</span> <span class="pl-s"><span class="pl-pds">"</span>user<span class="pl-pds">"</span></span>, <span class="pl-c1">password:</span> <span class="pl-s"><span class="pl-pds">"</span>easy<span class="pl-pds">"</span></span>
+})
+
+<span class="pl-c"># add a document</span>
+body <span class="pl-k">=</span>  <span class="pl-s"><span class="pl-pds">"</span>&lt;message&gt;&lt;body&gt;Hello World&lt;/body&gt;&lt;/message&gt;<span class="pl-pds">"</span></span>
+db.put(<span class="pl-s"><span class="pl-pds">"</span>/my-collection/my-document<span class="pl-pds">"</span></span>, body)
+
+<span class="pl-c"># get document body</span>
+doc <span class="pl-k">=</span> db.get(<span class="pl-s"><span class="pl-pds">"</span>/my-collection/my-document<span class="pl-pds">"</span></span>)
+
+<span class="pl-c"># query for all message bodies</span>
+bodies <span class="pl-k">=</span> db.query(<span class="pl-s"><span class="pl-pds">"</span>collection('my-collection')/message/body<span class="pl-pds">"</span></span>);
+
+<span class="pl-c"># delete the document</span>
+db.delete(<span class="pl-s"><span class="pl-pds">"</span>/my-collection/my-document<span class="pl-pds">"</span></span>)</pre></div>
 
 <h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<a id="more-examples" class="anchor" href="#more-examples" aria-hidden="true"><span class="octicon octicon-link"></span></a>More Examples</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<h4>
+<a id="creating-a-db" class="anchor" href="#creating-a-db" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating a DB</h4>
+
+<p>The only required parameter for initializing a new DB is the URL for eXist-db. </p>
+
+<ul>
+<li>If no collection is specified, GET, PUT and DELETE requests are relative to <code>/db/</code> otherwise they are relative to the given collection.</li>
+<li>You can specify credentials that will be transmitted with all requests. If no user credentials are specified, eXist-db treats requests as being under the guest account. Unless you configure otherwise, the default behaviour is to allow guest to read but not write or delete. </li>
+</ul>
+
+<h5>
+<a id="url-only" class="anchor" href="#url-only" aria-hidden="true"><span class="octicon octicon-link"></span></a>URL Only</h5>
+
+<div class="highlight highlight-ruby"><pre>db <span class="pl-k">=</span> <span class="pl-c1">EasyExist</span>::<span class="pl-c1">DB</span>.<span class="pl-k">new</span>(<span class="pl-s"><span class="pl-pds">"</span>http://localhost:8080<span class="pl-pds">"</span></span>)</pre></div>
+
+<h5>
+<a id="specify-collection" class="anchor" href="#specify-collection" aria-hidden="true"><span class="octicon octicon-link"></span></a>Specify Collection</h5>
+
+<div class="highlight highlight-ruby"><pre>db <span class="pl-k">=</span> <span class="pl-c1">EasyExist</span>::<span class="pl-c1">DB</span>.<span class="pl-k">new</span>(<span class="pl-s"><span class="pl-pds">"</span>http://localhost:8080<span class="pl-pds">"</span></span>, { 
+        <span class="pl-c1">collection:</span> <span class="pl-s"><span class="pl-pds">"</span>my-collection<span class="pl-pds">"</span></span>
+})</pre></div>
+
+<h5>
+<a id="specify-user-credentials" class="anchor" href="#specify-user-credentials" aria-hidden="true"><span class="octicon octicon-link"></span></a>Specify user credentials</h5>
+
+<div class="highlight highlight-ruby"><pre>db <span class="pl-k">=</span> <span class="pl-c1">EasyExist</span>::<span class="pl-c1">DB</span>.<span class="pl-k">new</span>(<span class="pl-s"><span class="pl-pds">"</span>http://localhost:8080<span class="pl-pds">"</span></span>, { 
+        <span class="pl-c1">username:</span> <span class="pl-s"><span class="pl-pds">"</span>user<span class="pl-pds">"</span></span>, 
+        <span class="pl-c1">password:</span> <span class="pl-s"><span class="pl-pds">"</span>areallystrongpassword<span class="pl-pds">"</span></span> 
+})</pre></div>
+
+<h4>
+<a id="get" class="anchor" href="#get" aria-hidden="true"><span class="octicon octicon-link"></span></a>Get</h4>
+
+<p>Retrieves the body of document at the given URI. </p>
+
+<div class="highlight highlight-ruby"><pre>body <span class="pl-k">=</span> db.get(<span class="pl-s"><span class="pl-pds">"</span>/my-document.xml<span class="pl-pds">"</span></span>)</pre></div>
+
+<h4>
+<a id="put" class="anchor" href="#put" aria-hidden="true"><span class="octicon octicon-link"></span></a>Put</h4>
+
+<p>Puts the body at the given URI.</p>
+
+<div class="highlight highlight-ruby"><pre>body <span class="pl-k">=</span> <span class="pl-s"><span class="pl-pds">&lt;&lt;-END</span>;</span>
+<span class="pl-s">    &lt;xml&gt;</span>
+<span class="pl-s">        &lt;message&gt;</span>
+<span class="pl-s">            &lt;body&gt;Hello World&lt;/body&gt;</span>
+<span class="pl-s">            &lt;sender&gt;Alice&lt;/sender&gt;</span>
+<span class="pl-s">            &lt;receiver&gt;Bob&lt;/receiver&gt;</span>
+<span class="pl-s">            &lt;date&gt;2015-02-12&lt;/date&gt;</span>
+<span class="pl-s">        &lt;/message&gt;</span>
+<span class="pl-s">    &lt;/xml&gt;</span>
+<span class="pl-s"><span class="pl-pds">    END</span></span>
+
+db.put(<span class="pl-s"><span class="pl-pds">"</span>/messages/12345<span class="pl-pds">"</span></span>, body)</pre></div>
+
+<h4>
+<a id="delete" class="anchor" href="#delete" aria-hidden="true"><span class="octicon octicon-link"></span></a>Delete</h4>
+
+<p>Deletes the document at the given URI</p>
+
+<div class="highlight highlight-ruby"><pre>db.delete(<span class="pl-s"><span class="pl-pds">"</span>/messages/12345<span class="pl-pds">"</span></span>)</pre></div>
+
+<h4>
+<a id="exists" class="anchor" href="#exists" aria-hidden="true"><span class="octicon octicon-link"></span></a>Exists?</h4>
+
+<p>Returns true if the document exists, false otherwise.
+False will also be retured if the request fails. For example, if the user is unauthorized.</p>
+
+<div class="highlight highlight-ruby"><pre>db.put(<span class="pl-s"><span class="pl-pds">"</span>/messages/12345<span class="pl-pds">"</span></span>, body) <span class="pl-k">unless</span> db.exists?(<span class="pl-s"><span class="pl-pds">"</span>/messages/12345<span class="pl-pds">"</span></span>)
+
+db.delete(<span class="pl-s"><span class="pl-pds">"</span>/messages/12345<span class="pl-pds">"</span></span>) <span class="pl-k">if</span> db.exists?(<span class="pl-s"><span class="pl-pds">"</span>/messages/12345<span class="pl-pds">"</span></span>)</pre></div>
+
+<h4>
+<a id="query" class="anchor" href="#query" aria-hidden="true"><span class="octicon octicon-link"></span></a>QUERY</h4>
+
+<p>Runs the given query against the document store.</p>
+
+<div class="highlight highlight-ruby"><pre>query <span class="pl-k">=</span> <span class="pl-s"><span class="pl-pds">&lt;&lt;-END</span>;</span>
+<span class="pl-s">    for $message in collection('messages')//message</span>
+<span class="pl-s">        order by $message/date</span>
+<span class="pl-s">        return $message</span>
+<span class="pl-s"><span class="pl-pds">    END</span></span>
+
+db.query(query)</pre></div>
+
+<h5>
+<a id="paging" class="anchor" href="#paging" aria-hidden="true"><span class="octicon octicon-link"></span></a>Paging</h5>
+
+<p>You can specify the start index and max index when performing a query:</p>
+
+<div class="highlight highlight-ruby"><pre>db.query(query, { <span class="pl-c1">start:</span> <span class="pl-c1">2</span>, <span class="pl-c1">max:</span> <span class="pl-c1">10</span> })</pre></div>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="handling-exceptions" class="anchor" href="#handling-exceptions" aria-hidden="true"><span class="octicon octicon-link"></span></a>Handling Exceptions</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>If a HTTP request fails, the exception is raised to the client. </p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<p>Examples include:</p>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<ul>
+<li>User is not authenticated (401)</li>
+<li>User does not have permission (403)</li>
+<li>Document does not exist (404)</li>
+</ul>
+
+<p>For more information see <a href="http://www.rubydoc.info/github/jnunemaker/httparty/HTTParty/Response">HTTParty::Response</a> and <a href="http://ruby-doc.org/stdlib-1.9.3/libdoc/net/http/rdoc/Net/HTTPServerException.html">Net::HTTPServerException</a></p>
+
+<div class="highlight highlight-ruby"><pre><span class="pl-k">begin</span>
+    db.get(<span class="pl-s"><span class="pl-pds">"</span>/non-existant-document.xml<span class="pl-pds">"</span></span>)
+<span class="pl-k">rescue</span> <span class="pl-c1">Net</span>::<span class="pl-c1">HTTPServerException</span> =&gt; e
+    <span class="pl-k">case</span> e.response
+    <span class="pl-k">when</span> <span class="pl-c1">Net</span>::<span class="pl-c1">HTTPNotFound</span>        <span class="pl-k">then</span> puts <span class="pl-s"><span class="pl-pds">"</span>Oops, not Found!<span class="pl-pds">"</span></span>
+    <span class="pl-k">when</span> <span class="pl-c1">Net</span>::<span class="pl-c1">HTTPUnauthorized</span>    <span class="pl-k">then</span> puts <span class="pl-s"><span class="pl-pds">"</span>Unauthorized!<span class="pl-pds">"</span></span>
+    <span class="pl-c">#...</span>
+    <span class="pl-k">end</span>
+<span class="pl-k">end</span></pre></div>
+
+<h2>
+<a id="help--docs" class="anchor" href="#help--docs" aria-hidden="true"><span class="octicon octicon-link"></span></a>Help &amp; Docs</h2>
+
+<ul>
+<li><a href="http://casst01.github.io/easy-exist/docs">Easy-Exist Docs</a></li>
+<li><a href="http://exist-db.org/exist/apps/doc/devguide_rest.xml">eXist-db REST API reference</a></li>
+<li><a href="http://www.rubydoc.info/github/jnunemaker/httparty/HTTParty/Response">HTTParty::Response</a></li>
+<li><a href="http://ruby-doc.org/stdlib-1.9.3/libdoc/net/http/rdoc/Net/HTTPServerException.html">Net::HTTPServerException</a></li>
+</ul>
+
+<h2>
+<a id="contributing" class="anchor" href="#contributing" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributing</h2>
+
+<ul>
+<li>Fork the project.</li>
+<li>Make your feature addition or bug fix, including tests.</li>
+<li>Commit.</li>
+<li>Create a pull request.</li>
+</ul>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/casst01">casst01</a></p>
